[tool.poetry]
name = "barbara"
version = "1.1.2"
description = "Environment variable management"
authors = ["Matthew de Verteuil <onceuponajooks@gmail.com>"]
license = "GPL-3.0"
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Topic :: Software Development",
    "Topic :: System",
    "Topic :: Terminals",
]
packages = [
    { include = "barbara" },
]

[tool.black]
line-length = 120
target-version = ['py36', 'py37']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.poetry.dependencies]
python = "==3.*,>=3.6.0"
boto3 = { version = "^1.9", optional = true }
click = "==7.*,>=7.0.0"
poetry-version = "==0.*,>=0.1.3"
python-dotenv = "==0.*,>=0.10.1"
pyyaml = "==5.*,>=5.1.0"

[tool.poetry.dev-dependencies]
black = "==19.3b0"
flake8 = "==3.*,>=3.7.0"
flake8-bugbear = "==19.*,>=19.3.0"
flake8-mypy = "==17.*,>=17.8.0"
flake8-polyfill = "==1.*,>=1.0.0"
isort = { version = "==4.*", extras = [ "pyproject" ] }
lockfile = "==0.*,>=0.12.2"
poetry-setup = "==0.*,>=0.3.6"
pre-commit = "==1.*"
pytest = "==4.*"
pytest-cov = "==2.*"

[tool.poetry.extras]
ssm = ["boto3"]

[tool.poetry.scripts]
barb = "barbara.cli:barbara_develop"
barb-deploy = "barbara.cli:barbara_deploy"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 3
skip = "setup.py"
use_parentheses = true
verbose = true

[build-system]
requires = ["poetry>=0.12.16"]
build-backend = "poetry.masonry.api"
